Changing setCapabilities in tests